new component gateway

--- a/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
@@ -404,6 +404,19 @@ jvermittlungsrechnerkonfiguration_msg24 = Schnittstelle hinzuf\u00fcgen
 jvermittlungsrechnerkonfiguration_msg25 = Maximal 8 Schnittstellen erlaubt!
 jvermittlungsrechnerkonfiguration_msg26 = Automatisches Routing
 
+jgatewayconfiguration_msg1 = Konfiguration der Firewall
+jgatewayconfiguration_msg2 = Name
+jgatewayconfiguration_msg3 = Gateway
+jgatewayconfiguration_msg4 = Firewall einrichten
+jgatewayconfiguration_msg6 = Verbunden mit
+jgatewayconfiguration_msg7 = IP-Adresse
+jgatewayconfiguration_msg8 = Netzmaske
+jgatewayconfiguration_msg9 = Gateway
+jgatewayconfiguration_msg10 = Netzwerkkarte
+jgatewayconfiguration_msg16 = Keine Verbindung
+jgatewayconfiguration_msg17 = Allgemein
+jgatewayconfiguration_msg18 = MAC-Adresse
+
 jweiterleitungstabelle_msg1 = L\u00f6schen
 jweiterleitungstabelle_msg2 = Neue Zeile
 jweiterleitungstabelle_msg3 = Ziel
@@ -475,6 +488,10 @@ guievents_msg18 = Sehr Gro\u00df
 guievents_msg19 = Normal
 guievents_msg20 = Kursiv
 guievents_msg21 = Fett
+guievents_msg22 = WAN-Anschluss bereits belegt!
+guievents_msg23 = LAN-Anschluss bereits belegt!
+guievents_msg24 = WAN-Anschluss
+guievents_msg25 = LAN-Anschluss
 
 guihilfe_msg1 = Hilfe
 guihilfe_msg2 = <html><head></head><body><h1>Fehler</h1>Hilfedateien nicht gefunden..</body></html>
@@ -517,7 +534,7 @@ hw_rechner_msg2 = Neuer Rechner
 hw_switch_msg1 = Switch
 
 hw_vermittlungsrechner_msg1 = Vermittlungsrechner
-
+hw_gateway_msg1 = Gateway
 hw_kabel_msg1 = Kabel
 
 hw_verbindung_msg1 = Ein Port von den beiden ist schon belegt.
