--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -403,6 +403,19 @@ jvermittlungsrechnerkonfiguration_msg24 = Add interface
 jvermittlungsrechnerkonfiguration_msg25 = At most 8 interfaces supported!
 jvermittlungsrechnerkonfiguration_msg26 = Automatic Routing
 
+jgatewayconfiguration_msg1 = Firewall setup
+jgatewayconfiguration_msg2 = Name
+jgatewayconfiguration_msg3 = Gateway
+jgatewayconfiguration_msg4 = Firewall settings
+jgatewayconfiguration_msg6 = Connected to
+jgatewayconfiguration_msg7 = IP address
+jgatewayconfiguration_msg8 = Netmask
+jgatewayconfiguration_msg9 = Gateway
+jgatewayconfiguration_msg10 = NIC
+jgatewayconfiguration_msg16 = No Connection
+jgatewayconfiguration_msg17 = General
+jgatewayconfiguration_msg18 = MAC address
+
 jweiterleitungstabelle_msg1 = Clear
 jweiterleitungstabelle_msg2 = New line
 jweiterleitungstabelle_msg3 = Destination
@@ -474,6 +487,10 @@ guievents_msg18 = Very Large
 guievents_msg19 = Normal
 guievents_msg20 = Italic
 guievents_msg21 = Bold
+guievents_msg22 = WAN port already occupied!
+guievents_msg23 = LAN port already occupied!
+guievents_msg24 = WAN port
+guievents_msg25 = LAN port
 
 guihilfe_msg1 = Help
 guihilfe_msg2 = <html><head></head><body><h1>Error</h1>Helpfiles not found.</body></html>
@@ -516,7 +533,7 @@ hw_rechner_msg2 = New Computer
 hw_switch_msg1 = Switch
 
 hw_vermittlungsrechner_msg1 = Router
-
+hw_gateway_msg1 = Gateway
 hw_kabel_msg1 = Cable
 
 hw_verbindung_msg1 = One of the connectors is already reserved.
