--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -410,6 +410,19 @@ jvermittlungsrechnerkonfiguration_msg24 = Ajouter une interface
 jvermittlungsrechnerkonfiguration_msg25 = Le nombre d\u2019interfaces est limit\u00e9 \u00e0 8\u00a0!
 jvermittlungsrechnerkonfiguration_msg26 = Routage automatique
 
+jgatewayconfiguration_msg1 = Configuration du parefeu
+jgatewayconfiguration_msg2 = Nom
+jgatewayconfiguration_msg3 = Gateway
+jgatewayconfiguration_msg4 = Configurer le parefeu
+jgatewayconfiguration_msg6 = Connect\u00e9 \u00e0
+jgatewayconfiguration_msg7 = Adresse IP
+jgatewayconfiguration_msg8 = Masque
+jgatewayconfiguration_msg9 = Passerelle
+jgatewayconfiguration_msg10 = Carte r\u00e9seau
+jgatewayconfiguration_msg16 = Aucune connexion
+jgatewayconfiguration_msg17 = G\u00e9n\u00e9ral
+jgatewayconfiguration_msg18 = Adresse Mac
+
 jweiterleitungstabelle_msg1 = Supprimer la ligne s\u00e9lectionn\u00e9e
 jweiterleitungstabelle_msg2 = Nouvelle ligne
 jweiterleitungstabelle_msg3 = IP de destination
@@ -482,6 +495,10 @@ guievents_msg18 = Plus grande
 guievents_msg19 = Normal
 guievents_msg20 = Italique
 guievents_msg21 = Gras
+guievents_msg22 = Port WAN occupé!
+guievents_msg23 = Port LAN occupé!
+guievents_msg24 = Port WAN
+guievents_msg25 = Port LAN
 
 guihilfe_msg1 = Aide
 guihilfe_msg2 = <html><head></head><body><h1>Erreur</h1>Fichiers d&#8217;aide introuvables.</body></html>
@@ -525,7 +542,7 @@ hw_rechner_msg2 = Ordinateur
 hw_switch_msg1 = Switch
 
 hw_vermittlungsrechner_msg1 = Routeur
-
+hw_gateway_msg1 = Gateway
 hw_kabel_msg1 = Cable
 
 hw_verbindung_msg1 = L\u2019un des deux ports est d\u00e9j\u00e0 occup\u00e9.
