support drop packets

--- a/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
@@ -807,3 +807,5 @@ report_dns_rr = Konfiguration DNS-Server
 report_domain = Domainname
 report_type = Typ
 report_data = Daten
+
+simulation_control_drop_packets = Pakete verwerfen
