--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -806,3 +806,5 @@ report_dns_rr = Configuration DNS Server
 report_domain = Domain Name
 report_type = Type
 report_data = Data
+
+simulation_control_drop_packets = Drop Packets
