--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -815,3 +815,5 @@ report_dns_rr = Configuration Serveur DNS
 report_domain = Domaine
 report_type = Type
 report_data = Date
+
+simulation_control_drop_packets = Jeter des paquets
