lots of re-factoring around transport protocols and sockets clone frames with transfer over connection

--- a/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
@@ -733,13 +733,12 @@ sw_socket_msg1 = Ziel konnte nicht bestimmt werden!
 sw_tcpsocket_msg1 = Fehler beim Aufbau einer Server-Verbindung
 sw_tcpsocket_msg2 = Zeit\u00fcberschreitung beim Verbindungsaufbau
 sw_tcpsocket_msg3 = Aktives \u00d6ffnen des Sockets fehlgeschlagen
-sw_tcpsocket_msg4 = Zeit\u00fcberschreitung beim Verbindungsaufbau
 sw_tcpsocket_msg5 = Fehler beim Aufbau einer Server-Verbindung.
 sw_tcpsocket_msg6 = Verbindung nicht aufgebaut!
 sw_tcpsocket_msg7 = Verbindung wurde unterbrochen
-sw_tcpsocket_msg8 = Zeit\u00fcberschreitung w\u00e4hrend Versand einer Nachricht
+sw_tcpsocket_msg8 = Zeit\u00fcberschreitung w\u00e4hrend des Versands einer Nachricht
 sw_tcpsocket_msg9 = Keine Verbindung hergestellt!
-sw_tcpsocket_msg10 = Zeit\u00fcberschreitung w\u00e4hrend dem Empfang einer Nachricht
+sw_tcpsocket_msg10 = Zeit\u00fcberschreitung w\u00e4hrend des Empfangs einer Nachricht
 
 sw_transportprotokoll_msg1 = Port
 sw_transportprotokoll_msg2 = nicht vorhanden
