add terminal command nslookup (as alternative to host)

--- a/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
@@ -653,6 +653,7 @@ sw_terminal_msg25 = Liste verf\u00fcgbarer Befehle:\n \
 					mkdir         erstelle Verzeichnis\n \
 					move / mv     Datei verschieben/umbenennen\n \
 					netstat       zeige Liste aller Verbindungen\n \
+					nslookup      l\u00f6se Hostnamen zu IP-Adresse auf\n \
 					ping          teste Verbindung zu anderem Rechner\n \
 					pwd           gib Pfad des aktuellen Arbeitsverzeichnisses aus\n \
 					route         Routing-/Weiterleitungstabelle anzeigen\n \
