--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -652,6 +652,7 @@ sw_terminal_msg25 = List of available commands:\n \
 					mkdir         create directory\n \
 					move / mv     move/rename file\n \
                     netstat       show list of connections\n \
+					nslookup      resolve hostname to IP address\n \
 					ping          test connection to other computer\n \
 					pwd           print working directory\n \
 					route         show routing table\n \
