--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -661,6 +661,7 @@ sw_terminal_msg25 = Liste des commandes disponibles:\n \
 					mkdir         cr\u00e9e un dossier\n \
 					move / mv     d\u00e9place/renomme un fichier\n \
                     netstat       affiche la liste des connexions en cours\n \
+					nslookup      r\u00e9sout un nom d\u2019h\u00f4te en adresse IP\n \
 					ping          teste la connexion avec un autre ordinateur\n \
 					pwd           affiche le chemin du dossier courant\n \
 					route         affiche la table de routage\n \
