rename NAT gateway

--- a/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
@@ -534,7 +534,7 @@ hw_rechner_msg2 = Neuer Rechner
 hw_switch_msg1 = Switch
 
 hw_vermittlungsrechner_msg1 = Vermittlungsrechner
-hw_gateway_msg1 = Gateway
+hw_gateway_msg1 = NAT Gateway
 hw_kabel_msg1 = Kabel
 
 hw_verbindung_msg1 = Ein Port von den beiden ist schon belegt.
