- host command resolves mx - support dns response with multiple records - fix DNS endless loop

--- a/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
@@ -709,6 +709,8 @@ sw_terminal_msg57 = \n\n \
 \ \ \ \ \ \ \ \ \ \ \ \ \ SP      SP           SP                          \n \
 \ \ \ \ \ \ \ \ \ \ \ \ \ Y       Y            Y                           \n\n
 
+sw_terminal_msg58 = Mails werden behandelt durch
+
 sw_terminal_trace_msg1 = Benutzung:  traceroute <Ziel-Adresse> \n \
                     <Ziel-Adresse> ist eine IP-Adresse oder ein Domainname.
 sw_terminal_trace_msg2 = Fehler: Verbindung zum DNS-Server nicht m\u00f6glich.
