fix i18n for host command

--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -717,7 +717,7 @@ sw_terminal_msg57 = \n\n \
 \ \ \ \ \ \ \ \ \ \ \ \ \ SP      SP           SP                          \n \
 \ \ \ \ \ \ \ \ \ \ \ \ \ Y       Y            Y                           \n\n
 
-sw_terminal_msg58 = Mails werden behandelt durch
+sw_terminal_msg58 = le courrier est traité par
 
 sw_terminal_trace_msg1 = Usage: traceroute <destination> \n \
                     <destination> est une adresse IP ou un nom de domaine.
