--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -708,7 +708,7 @@ sw_terminal_msg57 = \n\n \
 \ \ \ \ \ \ \ \ \ \ \ \ \ SP      SP           SP                          \n \
 \ \ \ \ \ \ \ \ \ \ \ \ \ Y       Y            Y                           \n\n
 
-sw_terminal_msg58 = le courrier est traité par
+sw_terminal_msg58 = mail is handled by
 
 sw_terminal_trace_msg1 = Usage:  traceroute <target address> \n \
                     <target address> is an IP address or domain name.
