- remove usage of JInternalFrame for apps on desktop - minor re-factorings - fix server applications startup behavior if port is not available - fix webserver: when to use vhosts!

--- a/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
@@ -253,6 +253,7 @@ webserver_msg5 = Unterverzeichnis
 webserver_msg6 = Verwende virtuelle Hosts
 
 desktoppanel_msg1 = Software-Installation
+desktoppanel_application=Startbildschirm
 
 installationsdialog_msg1 = Software-Installation
 installationsdialog_msg2 = \u00C4nderungen annehmen
@@ -551,6 +552,7 @@ sw_serveranwendung_msg2 = Annahme von Verbindungsanfragen gestartet
 sw_serveranwendung_msg3 = Server-Socket geschlossen
 sw_serveranwendung_msg4 = Verbindung zu
 sw_serveranwendung_msg5 = hergestellt
+sw_serveranwendung_msg6 = Server-Socket konnte nicht geˆffnet werden.
 
 sw_servermitarbeiter_msg1 = Socket zu
 sw_servermitarbeiter_msg2 = geschlossen
@@ -610,6 +612,7 @@ sw_fileexplorer_msg3 = Datei existiert nicht oder ist zu gro\u00df (> 150KB)
 
 sw_fileimporter_msg1 = Datei konnte nicht importiert werden
 sw_fileimporter_msg2 = Datei erfolgreich importiert!
+sw_fileimporter_msg3 = Schlieﬂen
 
 sw_terminal_msg1 = Anwendung
 sw_terminal_msg2 = ist bereits installiert.\n
