--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -253,6 +253,7 @@ webserver_msg5 = Subdirectory
 webserver_msg6 = Enable virtual hosts
 
 desktoppanel_msg1 = Software Installation
+desktoppanel_application=Home Screen
 
 installationsdialog_msg1 = Software Installation
 installationsdialog_msg2 = Apply changes
@@ -550,6 +551,7 @@ sw_serveranwendung_msg2 = Start accepting connections.
 sw_serveranwendung_msg3 = Server socket closed
 sw_serveranwendung_msg4 = Connection to
 sw_serveranwendung_msg5 = established
+sw_serveranwendung_msg6 = Server socket could not be initialized.
 
 sw_servermitarbeiter_msg1 = Socket to
 sw_servermitarbeiter_msg2 = closed
@@ -609,6 +611,7 @@ sw_fileexplorer_msg3 = File does not exist or is too large (> 150KB)
 
 sw_fileimporter_msg1 = File could not be imported.
 sw_fileimporter_msg2 = File successfully imported!
+sw_fileimporter_msg3 = Close
 
 sw_terminal_msg1 = Application
 sw_terminal_msg2 = is already installed.\n
