--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -258,6 +258,7 @@ webserver_msg5 = Sous-dossier
 webserver_msg6 = Activer les h\u00f4tes virtuels
 
 desktoppanel_msg1 = Installation des logiciels
+desktoppanel_application=Écran d'accueil
 
 installationsdialog_msg1 = Installation des logiciels
 installationsdialog_msg2 = Appliquer les modifications
@@ -559,6 +560,7 @@ sw_serveranwendung_msg2 = R\u00e9ception des requ\u00eates d\u00e9marr\u00e9e
 sw_serveranwendung_msg3 = Socket du serveur ferm\u00e9e
 sw_serveranwendung_msg4 = Connexion au socket
 sw_serveranwendung_msg5 =
+sw_serveranwendung_msg6 = Le socket du serveur n'a pas pu être initialisé.
 
 sw_servermitarbeiter_msg1 = D\u00e9connexion du socket
 sw_servermitarbeiter_msg2 =
@@ -618,6 +620,7 @@ sw_fileexplorer_msg3 = Fichier inexistant ou trop volumineux (> 150Ko)
 
 sw_fileimporter_msg1 = Le fichier n\u2019a pas pu \u00eatre import\u00e9
 sw_fileimporter_msg2 = Fichier import\u00e9 avec succ\u00e8s
+sw_fileimporter_msg3 = Fermer
 
 sw_terminal_msg1 = Application
 sw_terminal_msg2 = est d\u00e9j\u00e0 install\u00e9e.\n
