- rename NAT Gateway to Home Router - enable home router by default - design improvement sidebar

--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -533,7 +533,7 @@ hw_rechner_msg2 = New Computer
 hw_switch_msg1 = Switch
 
 hw_vermittlungsrechner_msg1 = Router
-hw_gateway_msg1 = NAT Gateway
+hw_gateway_msg1 = Home Router
 hw_kabel_msg1 = Cable
 
 hw_verbindung_msg1 = One of the connectors is already reserved.
