--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -542,7 +542,7 @@ hw_rechner_msg2 = Ordinateur
 hw_switch_msg1 = Switch
 
 hw_vermittlungsrechner_msg1 = Routeur
-hw_gateway_msg1 = NAT Gateway
+hw_gateway_msg1 = Routeur Domestique
 hw_kabel_msg1 = Cable
 
 hw_verbindung_msg1 = L\u2019un des deux ports est d\u00e9j\u00e0 occup\u00e9.
