- support MAC as host name - fix component icon (width) when drag new component to network - some minor typo issues in english

--- a/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_de_DE.properties
@@ -360,6 +360,7 @@ jhostkonfiguration_msg8 = DHCP-Server einrichten
 jhostkonfiguration_msg9 = MAC-Adresse
 jhostkonfiguration_msg10 = IP-Adresse als Name verwenden
 jhostkonfiguration_msg11 = IP-Weiterleitung aktivieren
+jhostkonfiguration_msg12 = MAC-Adresse als Name verwenden
 
 jmodemkonfiguration_msg1 = Name
 jmodemkonfiguration_msg2 = Auf eingehende Verbindungsanfrage warten
