--- a/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_en_GB.properties
@@ -350,7 +350,7 @@ jfirewalldialog_msg44 = General
 
 jhostkonfiguration_msg1 = Name
 jhostkonfiguration_msg2 = New Computer
-jhostkonfiguration_msg3 = IP address
+jhostkonfiguration_msg3 = IP Address
 jhostkonfiguration_msg4 = Netmask
 jhostkonfiguration_msg5 = Gateway
 jhostkonfiguration_msg6 = Domain Name Server
@@ -359,6 +359,7 @@ jhostkonfiguration_msg8 = DHCP server setup
 jhostkonfiguration_msg9 = MAC Address
 jhostkonfiguration_msg10 = Use IP address as name
 jhostkonfiguration_msg11 = Activate IP forwarding
+jhostkonfiguration_msg12 = Use MAC address as name
 
 jmodemkonfiguration_msg1 = Name
 jmodemkonfiguration_msg2 = Wait for incoming connection request
@@ -379,7 +380,7 @@ jvermittlungsrechnerkonfiguration_msg3 = Router
 jvermittlungsrechnerkonfiguration_msg4 = Firewall settings
 jvermittlungsrechnerkonfiguration_msg5 = No connection
 jvermittlungsrechnerkonfiguration_msg6 = Connected to
-jvermittlungsrechnerkonfiguration_msg7 = IP address
+jvermittlungsrechnerkonfiguration_msg7 = IP Address
 jvermittlungsrechnerkonfiguration_msg8 = Netmask
 jvermittlungsrechnerkonfiguration_msg9 = Gateway
 jvermittlungsrechnerkonfiguration_msg10 = NIC
@@ -390,7 +391,7 @@ jvermittlungsrechnerkonfiguration_msg14 = Open as window
 jvermittlungsrechnerkonfiguration_msg15 = Forwarding table
 jvermittlungsrechnerkonfiguration_msg16 = No Connection
 jvermittlungsrechnerkonfiguration_msg17 = General
-jvermittlungsrechnerkonfiguration_msg18 = MAC address
+jvermittlungsrechnerkonfiguration_msg18 = MAC Address
 jvermittlungsrechnerkonfiguration_msg19 = Note: For reorganising cable connections:\n \
 					  1. choose cable connection by clicking the button next to the interface name\n \
 					  2. choose new interface by clicking according button\n \n \
@@ -398,7 +399,7 @@ jvermittlungsrechnerkonfiguration_msg19 = Note: For reorganising cable connectio
 jvermittlungsrechnerkonfiguration_msg20 = Close
 jvermittlungsrechnerkonfiguration_msg21 = Foreign components
 jvermittlungsrechnerkonfiguration_msg22 = Local interfaces
-jvermittlungsrechnerkonfiguration_msg23 = Manage Connections
+jvermittlungsrechnerkonfiguration_msg23 = Manage connections
 jvermittlungsrechnerkonfiguration_msg24 = Add interface
 jvermittlungsrechnerkonfiguration_msg25 = At most 8 interfaces supported!
 jvermittlungsrechnerkonfiguration_msg26 = Automatic Routing
@@ -408,13 +409,13 @@ jgatewayconfiguration_msg2 = Name
 jgatewayconfiguration_msg3 = Gateway
 jgatewayconfiguration_msg4 = Firewall settings
 jgatewayconfiguration_msg6 = Connected to
-jgatewayconfiguration_msg7 = IP address
+jgatewayconfiguration_msg7 = IP Address
 jgatewayconfiguration_msg8 = Netmask
 jgatewayconfiguration_msg9 = Gateway
 jgatewayconfiguration_msg10 = NIC
 jgatewayconfiguration_msg16 = No Connection
 jgatewayconfiguration_msg17 = General
-jgatewayconfiguration_msg18 = MAC address
+jgatewayconfiguration_msg18 = MAC Address
 
 jweiterleitungstabelle_msg1 = Clear
 jweiterleitungstabelle_msg2 = New line
