--- a/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
+++ b/src/main/resources/filius/messages/MessagesBundle_fr_FR.properties
@@ -366,6 +366,7 @@ jhostkonfiguration_msg8 = Configuration du service DHCP
 jhostkonfiguration_msg9 = Adresse MAC
 jhostkonfiguration_msg10 = Utiliser l\u2019adresse IP comme nom
 jhostkonfiguration_msg11 = Activer routage des paquets
+jhostkonfiguration_msg12 = Utiliser l\u2019adresse MAC comme nom
 
 jmodemkonfiguration_msg1 = Nom
 jmodemkonfiguration_msg2 = Attendre les connexions entrantes
